# Bookly

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 99db32ec0b54_init.py  fcab5132edd5_add_password.py
src/: __init__.py  config.py
src/auth/: models.py  routers.py  routes.py  schemas.py  service.py  utils.py
src/books/: book_data.py  models.py  routes.py  schemas.py  service.py
src/db/: main.py
